--- a/models/BERT_weights.ipynb
+++ b/models/BERT_weights.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "transformers_logging.set_verbosity_error()\n",
     "\n",
-    "DATA_PATH = \"NFR_five4.csv\"\n",
+    "DATA_PATH = \"NFR_data.csv\"\n",
     "TEXT_COL = \"sentence\"\n",
     "LABEL_COL = \"class_name\"\n",
     "MODEL_NAME = \"distilbert-base-uncased\"\n",
